[ KOL List ] Fix sort menu (+2 squashed commit)
Squashed commit:

[158a071] [ KOL List ] Fix blogger alignment

[d02039f] [ Dashboard ] Add

--- a/css/collaboration.less
+++ b/css/collaboration.less
@@ -303,3 +303,13 @@ hr.paySideHr {
   border-top: 1px solid #2B3941;
   margin: 20px 15px;
 }
+
+.content-wrapper {
+  padding: 0px 20px;
+  h3 {
+    margin-top: 0px;
+  }
+  .content {
+    margin-top: 10px;
+  }
+}
